# Career-ops

./: .gitignore
Pulse-Ops/: .env.example  docker-compose.yml  pyproject.toml
Pulse-Ops/agents/ingestion/: __init__.py  github_fetcher.py  impact_scorer.py  ingestion_pipeline.py  leetcode_fetcher.py  pulse_score.py  supabase_log_fetcher.py
Pulse-Ops/agents/models/: __init__.py  schemas.py
Pulse-Ops/agents/outreach/: __init__.py  executor.py  form_mapper.py  outreach_pipeline.py  session_manager.py
Pulse-Ops/agents/tailor/: __init__.py  matcher.py  narrative_generator.py  pdf_generator.py  tailor_pipeline.py
Pulse-Ops/backend/: Dockerfile  Makefile  logger.py  main.py  scheduler.py
Pulse-Ops/backend/routers/: candidates.py  missions.py  onboarding.py  public_api.py  pulse.py
Pulse-Ops/backend/tests/: test_api.py  test_integration.py  test_unit.py
Pulse-Ops/frontend/: package-lock.json  package.json  tailwind.config.ts
Pulse-Ops/frontend/src/: middleware.ts
Pulse-Ops/frontend/src/app/: globals.css  layout.tsx  page.tsx
Pulse-Ops/frontend/src/components/: providers.tsx
Pulse-Ops/frontend/src/lib/: api.ts  queries.ts  (+2 more)
Pulse-Ops/pulse-sdk/: README.md  setup.py
Pulse-Ops/pulse-sdk/pulse_sdk/: __init__.py  client.py
Pulse-Ops/shared/: constants.py  supabase_client.py
Pulse-Ops/supabase/migrations/: 001_core_tables.sql  002_jobs_and_missions.sql  003_pulse_and_activity.sql  004_recruiter_actions.sql  005_rls_policies.sql  006_functions_and_scalability.sql  20260425000000_pulse_ops_initial_schema.sql  20260425100000_user_internships_and_onboarding.sql
(+25 files in other folders)
